# mrpro

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  VERSION  api.html  contributer_guide.html  contributor_guide.html  examples.html  faq.html  genindex.html  index.html  notebook_direct_reconstruction.html  notebook_iterative_sense_reconstruction.html  notebook_pulseq_2d_radial_golden_angle.html  notebook_qmri_sg_challenge_2024_t1.html  notebook_qmri_sg_challenge_2024_t2_star.html  notebook_t1_mapping_with_grad_acq.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  user_guide.html
.doctrees/: api.doctree  contributer_guide.doctree  contributor_guide.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  notebook_direct_reconstruction.doctree  notebook_iterative_sense_reconstruction.doctree  notebook_pulseq_2d_radial_golden_angle.doctree  notebook_qmri_sg_challenge_2024_t1.doctree  notebook_qmri_sg_challenge_2024_t2_star.doctree  notebook_t1_mapping_with_grad_acq.doctree  user_guide.doctree
.doctrees/_autosummary/: mrpro.algorithms.csm.doctree  mrpro.algorithms.csm.inati.doctree  mrpro.algorithms.csm.iterative_walsh.doctree  mrpro.algorithms.csm.walsh.doctree  mrpro.algorithms.dcf.dcf_1d.doctree  mrpro.algorithms.dcf.dcf_2d3d_voronoi.doctree  mrpro.algorithms.dcf.dcf_voronoi.ConvexHull.doctree  mrpro.algorithms.dcf.dcf_voronoi.ProcessPoolExecutor.doctree  mrpro.algorithms.dcf.dcf_voronoi.Voronoi.doctree  mrpro.algorithms.dcf.dcf_voronoi.dcf_1d.doctree  mrpro.algorithms.dcf.dcf_voronoi.dcf_2d3d_voronoi.doctree  mrpro.algorithms.dcf.dcf_voronoi.doctree  mrpro.algorithms.dcf.dcf_voronoi.product.doctree  mrpro.algorithms.dcf.doctree  mrpro.algorithms.doctree  mrpro.algorithms.optimizers.OptimizerStatus.doctree  mrpro.algorithms.optimizers.adam.doctree  mrpro.algorithms.optimizers.cg.doctree  mrpro.algorithms.optimizers.doctree  mrpro.algorithms.optimizers.lbfgs.doctree  mrpro.algorithms.prewhiten_kspace.doctree  mrpro.algorithms.reconstruction.DirectReconstruction.doctree  mrpro.algorithms.reconstruction.IterativeSENSEReconstruction.doctree  mrpro.algorithms.reconstruction.Reconstruction.doctree  mrpro.algorithms.reconstruction.doctree  mrpro.data.AcqIdx.doctree  mrpro.data.AcqInfo.doctree  mrpro.data.CsmData.doctree  mrpro.data.Data.doctree  mrpro.data.DcfData.doctree  mrpro.data.EncodingLimits.doctree  mrpro.data.IData.doctree  mrpro.data.IHeader.doctree  mrpro.data.KData.doctree  mrpro.data.KHeader.doctree  (+142 more)
.github/: dependabot.yml
.precommit/: add_notebook_preamble.py  add_notebook_preemble.py
_autosummary/: mrpro.algorithms.csm.html  mrpro.algorithms.csm.inati.html  mrpro.algorithms.csm.iterative_walsh.html  mrpro.algorithms.csm.walsh.html  mrpro.algorithms.dcf.dcf_1d.html  mrpro.algorithms.dcf.dcf_2d3d_voronoi.html  mrpro.algorithms.dcf.dcf_voronoi.ConvexHull.html  mrpro.algorithms.dcf.dcf_voronoi.ProcessPoolExecutor.html  mrpro.algorithms.dcf.dcf_voronoi.Voronoi.html  mrpro.algorithms.dcf.dcf_voronoi.dcf_1d.html  mrpro.algorithms.dcf.dcf_voronoi.dcf_2d3d_voronoi.html  mrpro.algorithms.dcf.dcf_voronoi.html  mrpro.algorithms.dcf.dcf_voronoi.product.html  mrpro.algorithms.dcf.html  mrpro.algorithms.html  mrpro.algorithms.optimizers.OptimizerStatus.html  mrpro.algorithms.optimizers.adam.html  mrpro.algorithms.optimizers.cg.html  mrpro.algorithms.optimizers.html  mrpro.algorithms.optimizers.lbfgs.html  mrpro.algorithms.prewhiten_kspace.html  mrpro.algorithms.reconstruction.DirectReconstruction.html  mrpro.algorithms.reconstruction.IterativeSENSEReconstruction.html  mrpro.algorithms.reconstruction.Reconstruction.html  mrpro.algorithms.reconstruction.html  mrpro.data.AcqIdx.html  mrpro.data.AcqInfo.html  mrpro.data.CsmData.html  mrpro.data.Data.html  mrpro.data.DcfData.html  mrpro.data.EncodingLimits.html  mrpro.data.IData.html  mrpro.data.IHeader.html  mrpro.data.KData.html  mrpro.data.KHeader.html  mrpro.data.KNoise.html  mrpro.data.KTrajectory.html  mrpro.data.KTrajectoryRawShape.html  mrpro.data.Limits.html  mrpro.data.MoveDataMixin.html  (+137 more)
_modules/: abc.html  dataclasses.html  enum.html  index.html  typing.html
_sources/: api.rst.txt  contributer_guide.rst.txt  contributor_guide.rst.txt  examples.rst.txt  faq.rst.txt  index.rst.txt  notebook_direct_reconstruction.rst.txt  notebook_iterative_sense_reconstruction.rst.txt  notebook_pulseq_2d_radial_golden_angle.rst.txt  notebook_qmri_sg_challenge_2024_t1.rst.txt  notebook_qmri_sg_challenge_2024_t2_star.rst.txt  notebook_t1_mapping_with_grad_acq.rst.txt  user_guide.rst.txt
binder/: Dockerfile  environment.yml  requirements.txt
docker/: Dockerfile  Dockerfile_minimal  Dockerfile_py310  Dockerfile_py310_minimal  Dockerfile_py311  Dockerfile_py312  Dockerfile_py313  Dockerfile_runner  Runner  install_dependencies.sh  install_dependencies_minimal.sh  install_mrpro.sh  install_system.sh  minimal-requirements.txt  minimal_requirements.txt  mrpro_Dockerfile_runner  py311.yml  reco.sh  runner_entrypoint.sh  ubuntu.sh
docs/: Makefile
examples/: .ruff.toml  2D_cartesian_reco_siemens.ipynb  2D_cartesian_reco_siemens.py  B1reco.ipynb  B1reco.py  Cart_rel_b1_mapping.ipynb  Cart_rel_b1_mapping.py  Cartesian_acquisitons.ipynb  DL.ipynb  DL.py  DLcnn.py  DLunet.py  Deb.ipynb  Diff_spirals_2D.ipynb  EllipsePhantom.ipynb  Im_DL.ipynb  Pulseq_vs_Ismrmrd.ipynb  RPE_rel_b1_mapping.ipynb  RPE_rel_b1_mapping.py  Test.ipynb  Test.py  Traj_diplay_and_split_kdata.ipynb  add_badge_in_pipe.py  b1_plus_mapping.ipynb  b1_plus_mapping.py  cMRF_example.py  cardiac_mrf.ipynb  cardiac_mrf.py  cardiac_mrf_brain.ipynb  cardiac_mrf_brain.py  cardiac_mrf_proj.ipynb  cardiac_mrf_proj.py  cardiac_mrf_rabbit.ipynb  cardiac_mrf_rabbit.py  cartesian_reconstruction.ipynb  cartesian_reconstruction.py  cartesian_reconstruction_example.ipynb  cartesian_reconstruction_example.py  cartesian_reconstrusction_example.py  csm_example.ipynb  (+53 more)
examples copy/: b1_plus_mapping.py
tests/: _RandomGenerator.py  __init__.py  conftest.py  helper.py  ruff.toml  utils.py
(+1170 files in other folders)
