[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools-git-versioning]
count_commits_from_version_file = true
enabled = true
version_file = "src/mrpro/VERSION"
template = "{tag}{env:MRPROVERSIONSUFFIX:''}"
dev_template = "{tag}{env:MRPROVERSIONSUFFIX:''}"
dirty_template = "{tag}+dirty{sha}"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mrpro" = ["VERSION"]

[project]
name = "mrpro"
description = "MR image reconstruction and processing package specifically developed for PyTorch."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dynamic = ["version"]
keywords = ["MRI, reconstruction, processing, PyTorch"]
authors = [
    { name = "MRpro Team", email = "info@emerpro.de" },
    { name = "Christoph Kolbitsch", email = "christoph.kolbitsch@ptb.de" },
    { name = "Patrick Schuenke", email = "patrick.schuenke@ptb.de" },
    { name = "Felix Zimmermann", email = "felix.zimmermann89@ptb.de" },
    { name = "David Schote", email = "david.schote@ptb.de" },
    { name = "Sherine Brahma", email = "sherine.brahma@ptb.de" },
    { name = "Mara Guastini", email = "mara.guastini@ptb.de" },
    { name = "Johannes Hammacher", email = "johannnes.hammacher@ptb.de" },
    { name = "Stefan Martin", email = "stefan.martin@ptb.de" },
    { name = "Andreas Kofler", email = "andreas.kofler@ptb.de" },
    { name = "Catarina Redshaw Kranich", email = "catarina.redshaw-kranich@ptb.de" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.23, <2.0",
    "torch>=2.3",
    "ismrmrd>=1.14.1",
    "einops",
    "pydicom>=2.3",
    "pypulseq>=1.4.2",
    "torchkbnufft>=1.4.0",
    "scipy>=1.12",
    "ptwt>=0.1.8",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
test = [
    "coverage",
    "codecov",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = ["sphinx",
    "sphinx_rtd_theme",
    "sphinx-pyproject",
    "myst-nb",
    "sphinx-mathjax-offline",
    ]
notebook = [
    "zenodo_get",
    "ipykernel",
    "ipywidgets",
    "jupytext",
    "matplotlib",
    "pip-tools",
]

[project.urls]
"Documentation" = "https://ptb-mr.github.io/mrpro/"

# PyTest section
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:'write_like_original':DeprecationWarning:pydicom:",
    "ignore:Anomaly Detection has been enabled:UserWarning", #torch.autograd
]
addopts = "-n auto"
markers = ["cuda : Tests only to be run when cuda device is available"]

# MyPy section
[tool.mypy]
warn_return_any = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true
exclude = ["docs"]
enable_error_code = ["ignore-without-code"]
warn_unused_ignores = true


[[tool.mypy.overrides]]
module = [
    "ismrmrd.*",
    "h5py",
    "scipy.*",
    "torchkbnufft",
    "pypulseq",
    "zenodo_get",
    "ptwt.*",
    "pywt.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
extend-exclude = ["__init__.py"]
exclude = ["docs/**"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM", # flake8-commas
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "FA",  # flake8-future-annotations
    "I",   # isort
    "N",   # pep8-naming
    "NPY", # NumPy-specific rules
    "RUF", # Ruff-specific rules
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    # "PL",  # PyLint
    "PTH", # flake8-use-pathlib
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "W",   # pycodestyle warnings
    "YTT", # flake8-2020
    "ERA", # flake8-eradicate
]
extend-select = [
    "ANN001", #  type annotation for function argument
    "ANN201", #  return type annonation public function
    "ANN205", #  return type annonation static method
    "ANN401", #  any type annotation
    "BLE001", #  blind exception
    "D107",   #  missing docstring in __init__
    "D417",   #  undocumented-parameter
]
ignore = [
    "N999",   #  invalid module name
    "COM812", #  missing-trailing-comma (conflict with formatter)
    "SIM108", #  if-else-block-instead-of-if-exp
]

[tool.ruff.lint.isort]
force-single-line = false
split-on-trailing-comma = false

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false

[tool.typos.default]
locale = "en-us"
check-filename = false

[tool.typos.default.extend-words]
Reson = "Reson"   # required for Proc. Intl. Soc. Mag. Reson. Med.
iy = "iy"
daa = "daa"       # required for wavelet operator
gaus = "gaus"     # required for wavelet operator
arange = "arange" # torch.arange

[tool.typos.files]
extend-exclude = [
    "examples/*.ipynb",
] # don't check notebooks because py files have already been checked

[tool.coverage.paths]
source = ["src", "*/site-packages"]
